[NTP] Remove UI MD flag

Remove flag for ntp md ui. Change the new styling to be the
default and remove the md class, this mainly affects the fakebox
as the icons are styled via md-icons.

Bug: 864673
Change-Id: I7eb5da522a657417c527e3aa666bab14f8485bef
Reviewed-on: https://chromium-review.googlesource.com/1255600
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Kristi Park <kristipark@chromium.org>
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595953}