chrome/browser/search/ntp_features.cc
@@ -12,19 +12,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace features {
 
 // If enabled, the user will see a configuration UI, and be able to select
-// background images to set on the New Tab Page. Implicitly enables |kNtpIcons|.
+// background images to set on the New Tab Page.
 const base::Feature kNtpBackgrounds{"NewTabPageBackgrounds",
                                     base::FEATURE_DISABLED_BY_DEFAULT};
 
 // If enabled, the user will see the Most Visited tiles updated with Material
-// Design elements. Implicitly enables |kNtpUIMd|.
+// Design elements.
 const base::Feature kNtpIcons{"NewTabPageIcons",
                               base::FEATURE_DISABLED_BY_DEFAULT};
-
-// If enabled, the user will see the New Tab Page updated with Material Design
-// elements.
-const base::Feature kNtpUIMd{"NewTabPageUIMd",
-                             base::FEATURE_DISABLED_BY_DEFAULT};
 
 bool IsCustomLinksEnabled() {
   return ntp_tiles::IsCustomLinksEnabled();
@@ -37,16 +32,6 @@ bool IsCustomBackgroundsEnabled() {
 
 bool IsMDIconsEnabled() {
   return base::FeatureList::IsEnabled(kNtpIcons) ||
-         base::FeatureList::IsEnabled(kNtpBackgrounds) ||
-         base::FeatureList::IsEnabled(ntp_tiles::kNtpCustomLinks) ||
-         base::FeatureList::IsEnabled(features::kExperimentalUi);
-}
-
-bool IsMDUIEnabled() {
-  return base::FeatureList::IsEnabled(kNtpUIMd) ||
-         // MD UI changes are implicitly enabled if Material Design icons,
-         // custom link, or custom backgrounds are enabled.
-         base::FeatureList::IsEnabled(kNtpIcons) ||
          base::FeatureList::IsEnabled(kNtpBackgrounds) ||
          base::FeatureList::IsEnabled(ntp_tiles::kNtpCustomLinks) ||
          base::FeatureList::IsEnabled(features::kExperimentalUi);
