chrome/browser/search/ntp_features.h
@@ -15,7 +15,6 @@ namespace features {
 
 extern const base::Feature kNtpBackgrounds;
 extern const base::Feature kNtpIcons;
-extern const base::Feature kNtpUIMd;
 
 // Returns whether New Tab Page custom links are enabled.
 bool IsCustomLinksEnabled();
@@ -25,9 +24,6 @@ bool IsCustomBackgroundsEnabled();
 
 // Returns whether the Material Design UI for Most Visited is enabled.
 bool IsMDIconsEnabled();
-
-// Returns whether the Material Design UI is enabled on the New Tab Page.
-bool IsMDUIEnabled();
 
 }  // namespace features
 
