chrome/browser/ui/search/local_ntp_browsertest.cc
@@ -603,7 +603,7 @@ class LocalNTPCustomLinksTest : public LocalNTPTest {
   LocalNTPCustomLinksTest()
       : LocalNTPTest(
             /*enabled_features=*/{features::kUseGoogleLocalNtp,
-                                  features::kNtpUIMd, features::kNtpIcons,
+                                  features::kNtpIcons,
                                   ntp_tiles::kNtpCustomLinks},
             /*disabled_features=*/{}) {}
 
@@ -769,9 +769,9 @@ class LocalNTPNonMDTest : public LocalNTPTest {
   LocalNTPNonMDTest()
       : LocalNTPTest(
             /*enabled_features=*/{features::kUseGoogleLocalNtp},
-            /*disabled_features=*/{
-                features::kNtpUIMd, features::kNtpBackgrounds,
-                features::kNtpIcons, ntp_tiles::kNtpCustomLinks}) {}
+            /*disabled_features=*/{features::kNtpBackgrounds,
+                                   features::kNtpIcons,
+                                   ntp_tiles::kNtpCustomLinks}) {}
 };
 
 IN_PROC_BROWSER_TEST_F(LocalNTPNonMDTest, LoadsNonMDIframe) {
